--- a/sharedemail.links.menu.yml
+++ b/sharedemail.links.menu.yml
@@ -1,5 +1,5 @@
 sharedemail.settings_form:
   route_name: sharedemail.settings_form
   parent: user.admin_index
-  title: 'Shared E-mail Settings'
+  title: 'Shared E-mail settings'
   description: 'Configure Shared E-mail settings.'
