--- a/sharedemail.permissions.yml
+++ b/sharedemail.permissions.yml
@@ -2,3 +2,5 @@ administer shared email:
   title: 'Administer Shared E-mail settings'
 access shared email message:
   title: 'Show Shared E-mail warning'
+create shared email account:
+  title: 'Create Shared E-mail user'
